Changed the background image so that it stretches over the whole screen and fixed an issue in the layout of the events area

--- a/www/modules/defenses/style.css
+++ b/www/modules/defenses/style.css
@@ -1,6 +1,6 @@
 body
 {
-  background-image: url("../img/background.jpeg");
+  background: url("../img/background.jpeg") no-repeat center center fixed;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -93,11 +93,12 @@ body
   margin: 5px;
   align-items: center;
 }
+
 #eventsbar
 {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: stretch;
   justify-content: stretch;
 }
 .event_element
