--- a/www/style.css
+++ b/www/style.css
@@ -1,6 +1,6 @@
 body
 {
-  background-image: url("img/background.jpeg");
+  background: url("img/background.jpeg") no-repeat center center fixed;
   background-size: cover;
 }
 
